--- a/css/index.css
+++ b/css/index.css
@@ -51,3 +51,22 @@ a::before {
     transform: scale(1.08);
     background-color: #33161a;
 }
+
+#Titulo {
+    background-color: #3A4042;
+    display: inline-block;
+    height: 184px;
+    width: 627px;
+    margin-left: 91px;
+    margin-top: 116px;
+    text-align: center;
+}
+
+h1 {
+    font-family: "Press Start 2P", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 40px;
+    line-height: 40px;
+    margin: 42px, 97px, 102px, 90px;
+}
