--- a/css/index.css
+++ b/css/index.css
@@ -41,7 +41,7 @@ a::before {
     display: inline-block;
     background-color: #363031;
     padding: 18px 20px;
-    box-shadow: 5px 5px 0 #000;
+    box-shadow: 5px 5px 4px #000;
     margin-right: 0;
     transition: transform 100ms cubic-bezier(.45,.97,.68,2.48), background 0.5s;
     
