--- a/css/components/button.css
+++ b/css/components/button.css
@@ -6,7 +6,7 @@
     margin-right: 0;
     transition: transform 100ms cubic-bezier(.45,.97,.68,2.48), background 0.5s;
     font-size: 20px;
-    color: #fff
+    color: #fff;
 }
 
 .button:hover {
