--- a/css/components/button.css
+++ b/css/components/button.css
@@ -1,12 +1,13 @@
 .button {
     display: inline-block;
-    background-color: #363031;
+    background-color: #3A4042;
     padding: 18px 20px;
     box-shadow: 5px 5px 4px #000;
     margin-right: 0;
     transition: transform 100ms cubic-bezier(.45,.97,.68,2.48), background 0.5s;
     font-size: 20px;
     color: #fff;
+    text-decoration: none;
 }
 
 .button:hover {
