Create the banner component

--- a/css/components/action.css
+++ b/css/components/action.css
@@ -11,7 +11,7 @@
 
 .action::before {
     content: "";
-    background-color: #363031;
+    background-color: #BB2020;
     width: 10px;
     height: 10px;
     margin-right: 10px;
