--- a/css/components/button.css
+++ b/css/components/button.css
@@ -1,6 +1,6 @@
 .button {
     display: inline-block;
-    background-color: #3A4042;
+    background-color: #BB2020;
     padding: 18px 20px;
     box-shadow: 5px 5px 4px #000;
     margin-right: 0;
