--- a/css/components/header.css
+++ b/css/components/header.css
@@ -1,7 +1,7 @@
 .header {
     display: flex;
     justify-content: space-between;
-    background-color: #BB2020;
+    background-color: #3A4042;
     border-bottom: 5px solid #000;
     padding-left: 20px;
     padding-right: 20px;
