changed the button and box components

--- a/css/components/box.css
+++ b/css/components/box.css
@@ -4,6 +4,7 @@
     text-align: center;
     box-shadow: 10px 10px 10px #000000;
     padding: 42px 44px;
+    border-radius: 20px;
 }
 
 .box .title {
