--- a/css/components/subtitle.css
+++ b/css/components/subtitle.css
@@ -1,9 +1,9 @@
 .subtitle { 
     color: #fff;
-    font-family: "Press Start 2P", sans-serif;
+    font-family: "New Tegomin", serif;
     font-style: normal;
     font-weight: normal;
-    font-size: 30px;
+    font-size: 40px;
     line-height: 30px;
     text-shadow: 4px 4px 4px #000000;
 }
