--- a/css/components/title.css
+++ b/css/components/title.css
@@ -1,6 +1,6 @@
 .title {
     color: #BB2020;
-    font-family: "Press Start 2P", sans-serif;
-    font-size: 40px;
+    font-family: "New Tegomin", serif;
+    font-size: 50px;
     text-shadow: 4px 4px 4px #000000;
 }
