creation the section component

--- a/css/components/title.css
+++ b/css/components/title.css
@@ -4,3 +4,9 @@
     font-size: 50px;
     text-shadow: 4px 4px 4px #000000;
 }
+
+.title.-second {
+    color: #fff;
+    text-shadow: none;
+    text-align: center;
+}
