--- a/css/components/main-title.css
+++ b/css/components/main-title.css
@@ -1,11 +1,11 @@
-.title {
+.main-title {
     color: #BB2020;
     font-family: "New Tegomin", serif;
     font-size: 50px;
     text-shadow: 4px 4px 4px #000000;
 }
 
-.title.-second {
+.main-title.-second {
     color: #fff;
     text-shadow: none;
     text-align: center;
