--- a/css/components/skill-tec.css
+++ b/css/components/skill-tec.css
@@ -1,4 +1,5 @@
 .skill-tec {
+    align-items: center;
     display: flex;
     font-family: "New Tegomin", serif;
     font-size: 35px;
@@ -7,10 +8,15 @@
 
 .skill-tec .icon {
     margin-right: 25px;
+    width: 90px;
 }
 
 .skill-tec .rigth {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+}
+
+.skill-tec .title {
+    margin-bottom: 10px;
 }
