--- a/css/components/main-title.css
+++ b/css/components/main-title.css
@@ -3,6 +3,7 @@
     font-family: "New Tegomin", serif;
     font-size: 50px;
     text-shadow: 4px 4px 4px #000000;
+    margin-bottom: 15px;
 }
 
 .main-title.-second {
