--- a/css/components/section.css
+++ b/css/components/section.css
@@ -3,9 +3,14 @@
     padding-top: 50px;
     padding-bottom: 100px;
     height: 730px;
-    border-bottom: 10px solid #000;
+    border-bottom: 10px solid #3A4042;
 }
 
 .section .main-title {
     margin-bottom: 60px;
+}
+
+.section.-second {
+    background-color: #000;
+    border-bottom: 10px solid #BB2020;
 }
