--- a/css/components/section.css
+++ b/css/components/section.css
@@ -10,7 +10,10 @@
     margin-bottom: 60px;
 }
 
-.section.-second {
+.section.-bgBlack {
     background-color: #000;
-    border-bottom: 10px solid #BB2020;
+}
+
+.section.-bdRed {
+    border-color: #BB2020;
 }
