add teh links to card-project

--- a/css/components/card-project.css
+++ b/css/components/card-project.css
@@ -5,7 +5,7 @@
     background-color: #3A4042;
     width: 280px;
     height: 280px;
-    box-shadow: 5px 5px 4px #fff;
+    box-shadow: 5px 5px 4px #7F7F7F;
     border-radius: 20px;
 }
 
