--- a/css/components/main-box.css
+++ b/css/components/main-box.css
@@ -1,4 +1,4 @@
-.box {
+.main-box {
     display: inline-block;
     background-color: #3A4042;
     text-align: center;
@@ -7,6 +7,6 @@
     border-radius: 20px;
 }
 
-.box .title {
+.main-box .main-title {
     margin-bottom: 28px;
 }
