--- a/css/components/main-button.css
+++ b/css/components/main-button.css
@@ -1,4 +1,4 @@
-.button {
+.main-button {
     display: inline-block;
     background-color: #BB2020;
     padding: 18px 20px;
@@ -11,7 +11,7 @@
     border-radius: 20px;
 }
 
-.button:hover {
+.main-button:hover {
     transform: scale(1.08);
     background-color: #33161a;
 }
