--- a/css/components/main-section.css
+++ b/css/components/main-section.css
@@ -1,4 +1,4 @@
-.section {
+.main-section {
     background-color: #BB2020;
     padding-top: 50px;
     padding-bottom: 100px;
@@ -6,14 +6,14 @@
     border-bottom: 10px solid #3A4042;
 }
 
-.section .main-title {
+.main-section .main-title {
     margin-bottom: 60px;
 }
 
-.section.-bgBlack {
+.main-section.-bgBlack {
     background-color: #000;
 }
 
-.section.-bdRed {
+.main-section.-bdRed {
     border-color: #BB2020;
 }
