--- a/css/components/main-section.css
+++ b/css/components/main-section.css
@@ -17,3 +17,11 @@
 .main-section.-bdRed {
     border-color: #BB2020;
 }
+
+.main-section.-bgGrey {
+    background-color: #3A4042;
+}
+
+.main-section.-bdBlack {
+    border-color: #000;
+}
