create the section Contact

--- a/css/components/main-title.css
+++ b/css/components/main-title.css
@@ -15,3 +15,7 @@
 .main-title.-second.-about {
     text-shadow: 4px 4px 4px #000000
 }
+
+.main-title.-second.-contact {
+    text-shadow: 4px 4px 4px #000000
+}
