--- a/css/components/main-footer.css
+++ b/css/components/main-footer.css
@@ -4,8 +4,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 28px;
+    padding-bottom: 28px;
 }
 
 .main-footer .icon {
-    margin-right: 40px;
+    margin-right: 20px;
+    margin-left: 20px;
 }
