--- a/css/reset.css
+++ b/css/reset.css
@@ -2,8 +2,9 @@ body {
     font-family: "fira code", sans-serif;
 }
 
-body, h1, h2, h3, figure {
+body, h1, h2, h3, figure, figure {
     margin: 0;
+    padding: 0;
 }
 
 button {
