--- a/css/components/main-button.css
+++ b/css/components/main-button.css
@@ -15,3 +15,13 @@
     transform: scale(1.08);
     background-color: #33161a;
 }
+
+.main-button.-form {
+    width: 100%;
+    background-color: #3A4042;
+}
+
+.main-button.-form:hover {
+    transform: scale(1.08);
+    background-color: #33161a;
+}
