--- a/css/components/main-button.css
+++ b/css/components/main-button.css
@@ -9,6 +9,7 @@
     color: #fff;
     text-decoration: none;
     border-radius: 20px;
+    cursor: pointer;
 }
 
 .main-button:hover {
@@ -22,6 +23,6 @@
 }
 
 .main-button.-form:hover {
-    transform: scale(1.08);
+    transform: scale(1.01);
     background-color: #33161a;
 }
