--- a/css/components/main-section.css
+++ b/css/components/main-section.css
@@ -28,5 +28,9 @@
 }
 
 .main-section.-contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     border-bottom: none;
+    height: 300px;
 }
