--- a/css/components/main-section.css
+++ b/css/components/main-section.css
@@ -27,7 +27,7 @@
     border-color: #000;
 }
 
-.main-section.-contact {
+.main-section.-contato {
     display: flex;
     flex-direction: column;
     align-items: center;
